2006-06-18  Jim Huang  <jserv@kaffe.org>

	PR classpath/28076:
	* native/jni/gconf-peer/Makefile.am (libgconfpeer_la_LIBADD):
	Fixed typo.

2006-06-19  Mark Wielaard  <mark@klomp.org>

	* include/Makefile.am: gnu_java_util_prefs_gconf_%.h should depend
	on gnu/java/util/prefs/gconf/%.class.
	* Java_gnu_java_util_prefs_gconf_GConfNativePeer_init_1class: Fix
	chache typo, should be cache.
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1gconf_1client_1all_1keys):
	Declare tmp early.
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1gconf_1client_1all_1nodes):
	Likewise.
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1remove_1dir):
	Don't return a value for void function.
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1add_1dir)
	Likewise.
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_gconf_1client_1dir_1exists):
	Mark clazz as unused.  Return JNI_FALSE, not NULL for jboolean
	function.
	(Java_gnu_java_util_prefs_gconf_GConfNativePeer_finalize_1class):
	Mark clazz ad unused.

2006-06-18  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/hash/Whirlpool.java: Source formatting.
	* gnu/java/security/hash/Tiger.java: Likewise.
	* gnu/java/security/hash/Sha512.java: Likewise.
	* gnu/java/security/hash/Sha384.java: Likewise.
	* gnu/java/security/hash/Sha256.java: Likewise.
	* gnu/java/security/hash/Sha160.java: Likewise.
	* gnu/java/security/hash/RipeMD160.java: Likewise.
	* gnu/java/security/hash/RipeMD128.java: Likewise.
	* gnu/java/security/hash/MD5.java: Likewise.
	* gnu/java/security/hash/MD4.java: Likewise.
	* gnu/java/security/hash/MD2.java: Likewise.
	* gnu/java/security/hash/IMessageDigest.java: Likewise.
	* gnu/java/security/hash/Haval.java: Likewise.
	* gnu/java/security/hash/HashFactory.java: Likewise.
	* gnu/java/security/hash/BaseHash.java: Likewise.

2006-06-18  Sven de Marothy  <sven@physto.se>

	* java/awt/event/KeyEvent.java: