@@ -1,3 +1,8 @@
+2006-06-18  Tom Tromey  <tromey@redhat.com>
+
+	* tools/gnu/classpath/tools/getopt/Parser.java (handleLongOption):
+	Also handle short options.
+
 2006-06-18  Jim Huang  <jserv@kaffe.org>
 
 	PR classpath/28076:
